# event-ticket-system-rs

./: Cargo.toml  README.md  current_schema.json
src/: cdc.rs  main.rs  worker.rs
src/models/: event.rs  mod.rs  order.rs  ticket.rs  venue.rs
