[package]
name = "events-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
scylla = "0.13.1"
scylla-cdc = {version =  "0.1.0", git = "https://github.com/DanielHe4rt/scylla-cdc-rust.git" }
tokio = { version = "1.38.1", features = ["full"] }
anyhow = "1.0.86"
async-trait = "0.1.81"
chrono = "0.4.38"
charybdis = "0.7.2"
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4"] }
pretty_env_logger = "0.5.0"
log = "0.4.22"
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = ["log"] }
